--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: rParisianOptions
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Parisian options pricing methods
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Sumun, M. Fadil
+Maintainer: Sumun, M. Fadil <sumun.fadil@gmail.com>
+Description: This package contains the implementation of the main methods to 
+        price Parisian options, namely Laplace transforms, partial differential
+        equations and finite-differences method, tree-based methods, Monte 
+        Carlo and recursions.
+License: Apache License
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.1
