--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,7 @@ export(BlackScholesCallPrice)
 export(BlackScholesPutPrice)
 export(explicitFDMEuropeanPut)
 export(plotFDMV)
+export(plotGridPoints)
+export(plotsExplicitFDM)
+export(thomasAlgorithmSolver)
+export(tridiagonalMatrix)
