--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,16 @@
 
 export(BlackScholesCallPrice)
 export(BlackScholesPutPrice)
+export(errorTable)
 export(explicitFDMEuropeanPut)
+export(explicitFDMEuropeanPutError)
+export(implicitFDMEuropeanPut)
+export(implicitFDMEuropeanPutError)
+export(plotErrorMultiple)
+export(plotFDMError)
 export(plotFDMV)
 export(plotGridPoints)
-export(plotsExplicitFDM)
+export(thetaFDMEuropeanPut)
+export(thetaFDMEuropeanPutError)
 export(thomasAlgorithmSolver)
 export(tridiagonalMatrix)
